# Bernini

./: .gitignore  README.md  gradio_demo.py  infer_multi_gpu.py  infer_single_gpu.py  pyproject.toml  requirements.txt
assets/testcases/i2i/: i2i.json
assets/testcases/r2v/: r2v.json  r2v_case2.json
assets/testcases/rv2v/: rv2v_case1.json  rv2v_case2.json
assets/testcases/t2i/: t2i.json
assets/testcases/t2v/: t2v.json
assets/testcases/v2v/: v2v_case1.json  v2v_case2.json
bernini/: cli.py  data_utils.py  pipeline.py
bernini/data/: bernini_process.py  bernini_template.py
bernini/models/: __init__.py  bernini.py  modeling_qwen2_5_vl.py  renderer.py  scheduler.py  transformer_wan.py  wan_diffusion.py
bernini/parallel/: __init__.py  ops.py  state.py
configs/bernini_renderer_wan21_1p3b/: config.json
docs/: bernini.md  bernini_r.md
scripts/bernini/: run_all_single_gpu.sh  run_gradio.sh  run_i2i.sh  run_r2v.sh  run_rv2v.sh  run_t2i.sh  run_t2v.sh  run_v2v.sh
scripts/bernini_r/: run_all_single_gpu.sh  run_gradio.sh  run_i2i.sh  run_r2v.sh  run_rv2v.sh  run_t2i.sh  run_t2v.sh  run_v2v.sh
